--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -8,6 +8,7 @@ OBJECTS_PATH	=		objects_bonus
 
 SOURCES			=		data_init_bonus.c \
 						dinner_bonus.c \
+						dinner_utils_bonus.c \
 						philo_bonus.c \
 						philo_utils_bonus.c \
 						time_utils_bonus.c
